--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shop |Resposive</title>
+    <title>Bootstrap | Resposive</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -983,9 +983,6 @@
     </section>
     <section
       class="last-section px-5"
-      data-aos="zoom-out-right"
-      data-aos-delay="300"
-      data-aos-duration="300"
     >
       <div class="container-fluid p-5 con-custom rounded-4 my-4">
         <h3 class="text-start fs-4 text-white mb-4">
